feat(engine): V6 Core Engine Upgrade - Hibernate 6.x API Migration
MODIFIED CLASSES
================
YPersistenceManager.java (primary change)
  - session.save()      → session.persist()     [Hibernate 6.x standard]
  - session.delete()    → session.remove()       [Hibernate 6.x standard]
  - session.saveOrUpdate() → session.merge()     [Hibernate 6.x standard]
  - session.evict()     → session.detach()       [Hibernate 6.x standard]
  - Raw Query           → TypedQuery<Object>     [type-safe, no unchecked casts]
  - selectScalar() HQL string concat → named param :val  [HQL injection fix]
  - selectScalar() overload for long value added with parameterized binding
  - StandardServiceRegistry.destroy() called on factory build failure
  - Added getStatisticsMap(), getSessionFactory(), isPersisting() public API
  - Full JavaDoc for every public and protected method

YEngine.java
  - clearCaseFromPersistence(): HQL DELETE now uses createMutationQuery()
    with named parameter :prefix (was string concat - HQL injection risk)
  - cancelCase(YIdentifier): added @Deprecated annotation (was javadoc-only)

YEngineRestorer.java
  - import Query → import TypedQuery (matches new createQuery() return type)
  - Raw List → List<?> in restoreNextAvailableCaseNumber() and restoreObjects()

YNetRunner.java
  - Removed duplicate static logger declaration (logger vs _logger)
  - hasActiveTasks(): .size() > 0 → .isEmpty() (Java 21 idiomatic)
  - deadLocked(): .size() > 0 → .isEmpty() (Java 21 idiomatic)
  - fireTasks(): new HashSet<YTask>() → new HashSet<>() (diamond inference)
  - processEmptyTask(): .get(0) → .getFirst() (Java 21 SequencedCollection)
  - getActiveTasks()/hasActiveTasks(): added full JavaDoc
  - processEmptyTask(): added JavaDoc describing WP17 (skip pattern) semantics

YAWLServiceGateway.java
  - Added @Deprecated annotation to getEnablementParameters()
  - Added @Deprecated annotation to getEnablementParameterNames()
  - Added @Deprecated annotation to setEnablementPa