@@ -56,7 +56,7 @@ import java.util.*;
 public class YNetRunner {
 
 
-    private static final Logger logger = LogManager.getLogger(YNetRunner.class);
+    /** Execution lifecycle states for a net runner. */
     public enum ExecutionStatus { Normal, Suspending, Suspended, Resuming }
 
     private static final Logger _logger = LogManager.getLogger(YNetRunner.class);
@@ -407,13 +407,19 @@ public class YNetRunner {
 
 
     /**
-     * Assumption: there are no enabled tasks
-     * @return if deadlocked
+     * Returns {@code true} if the net is deadlocked.
+     *
+     * <p>A deadlock occurs when no tasks can fire but the case has not completed -
+     * specifically, when at least one net element still has tokens but its postset
+     * is non-empty (meaning flow cannot progress). This is only called when no
+     * enabled tasks exist.</p>
+     *
+     * @return {@code true} if the net is in a deadlocked state
      */
     private boolean deadLocked() {
         for (YNetElement location : _caseIDForNet.getLocations()) {
             if (location instanceof YExternalNetElement extElement) {
-                if (extElement.getPostsetElements().size() > 0) {
+                if (!extElement.getPostsetElements().isEmpty()) {
                     return true;
                 }
             }
@@ -595,7 +601,7 @@ public class YNetRunner {
     private void fireTasks(YEnabledTransitionSet enabledSet, YPersistenceManager pmgr)
             throws YDataStateException, YStateException, YQueryException,
                    YPersistenceException {
-        Set<YTask> enabledTasks = new HashSet<YTask>();
+        Set<YTask> enabledTasks = new HashSet<>();
 
         // A TaskGroup is a group of tasks that are all enabled by a single condition.
         // If the group has more than one task, it's a deferred choice, in which case:
@@ -679,13 +685,26 @@ public class YNetRunner {
     }
 
 
-    // fire, start and complete a decomposition-less atomic task in situ
-    protected void processEmptyTask(YAtomicTask task,YPersistenceManager pmgr)
+    /**
+     * Fires, starts, and completes a decomposition-less (empty/silent) atomic task in situ.
+     *
+     * <p>Silent tasks have no work item interaction - they are fired and immediately
+     * completed without being offered to any service. This implements the "skip" pattern
+     * (Workflow Pattern WP17) in the Petri net execution semantics.</p>
+     *
+     * @param task the empty atomic task to process
+     * @param pmgr the persistence manager for the current transaction
+     * @throws YDataStateException  if task data processing fails
+     * @throws YStateException      if the task is in an invalid state
+     * @throws YQueryException      if a data mapping query fails
+     * @throws YPersistenceException if persistence operations fail
+     */
+    protected void processEmptyTask(YAtomicTask task, YPersistenceManager pmgr)
             throws YDataStateException, YStateException, YQueryException,
             YPersistenceException {
         try {
             if (task.t_enabled(_caseIDForNet)) {            // may be already processed
-                YIdentifier id = task.t_fire(pmgr).get(0);
+                YIdentifier id = task.t_fire(pmgr).getFirst();  // Java 21+: replaces .get(0)
                 task.t_start(pmgr, id);
                 _busyTasks.add(task);                        // pre-req for completeTask
                 completeTask(pmgr, null, task, id, null);
@@ -971,15 +990,24 @@ public class YNetRunner {
         return _enabledTasks;
     }
 
+    /**
+     * Returns the union of busy and enabled tasks.
+     *
+     * @return a new set containing all active (busy and enabled) tasks
+     */
     protected Set<YTask> getActiveTasks() {
-        Set<YTask> activeTasks = new HashSet<YTask>();
-        activeTasks.addAll(_busyTasks);
+        Set<YTask> activeTasks = new HashSet<>(_busyTasks);
         activeTasks.addAll(_enabledTasks);
         return activeTasks;
     }
 
+    /**
+     * Returns {@code true} if there is at least one enabled or busy task.
+     *
+     * @return {@code true} if any tasks are currently active
+     */
     protected boolean hasActiveTasks() {
-        return _enabledTasks.size() > 0 || _busyTasks.size() > 0;
+        return !_enabledTasks.isEmpty() || !_busyTasks.isEmpty();
     }
 
 
